# prime-ptm-torrent

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
prime_ptm_torrent/: busFactorPipeline.bash  commitsPipeline.bash  ghRepos.txt  issueDensityPipeline.py  issueSpoilagePipeline.py  issuesPipeline.py  issuesPipelinePreprocess.py  productivityPipeline.bash  setupGlobus.bash
prime_ptm_torrent/installers/: installGlobusConnectPersonal.bash
prime_ptm_torrent/utils/: getGitRemotes.bash
