[tool.poetry]
name = "prime-ptm-torrent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "prime_ptm_torrent"}]

[tool.poetry.dependencies]
python = "^3.10"
clime-metrics = "^0.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
